tests/checker/bad/bad-exception1.scilla
scilla_version 0

(* HelloWorld contract *)

(***************************************************)
(*             The contract definition             *)
(***************************************************)

contract HelloWorld
()

transition setHello (msg : String)
  f = fun (a : Uint32) => Uint32 0;
  e = { _exception : "SetHelloError"; fundef : f };
  throw e
end

transition setHello2 (msg : String)
  e = { _what : "SetHelloError" };
  throw e
end

transition setHello3 (msg : String)
  e = { _eventname : "SetHelloError" };
  throw e
end
